# douyin_email_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  backup_cleanup.py  bilibili_downloader.py  bot.py  config.yaml  config_loader.py  cookie_extractor.py  docker-compose.yml  douyin_downloader.py  email_bot.py  file_browser.py  get_cookie.py  launch_browser.bat  launch_browser.ps1  main.py  media_processor.py  migrate_downloads.py  play.py  process_media.py  pyproject.toml  requirements.txt  test_backup_cleanup.py  test_download.py  test_file_browser_upload.py  test_media_processor.py  url_extractor.py  web_login.py
conf/: app.yaml  conf.yaml
scripts/: launcher.ps1  setup_task.ps1  teardown_task.ps1
