[project]
name = "douyin-email-bot"
version = "0.2.0"
description = "Email bot that downloads Douyin and Bilibili videos from shared links"
requires-python = ">=3.11"
dependencies = [
    "f2>=0.0.1.7",
    "httpx>=0.27.0",
    "colorama>=0.4.6",
    "flask>=3.0.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]
